完善 1.20.1 Forge 移植兼容与内置测试界面支持