@@ -2,7 +2,7 @@ package com.lowdragmc.lowdraglib2.gui.ui;
 
 import com.lowdragmc.lowdraglib2.LDLib2;
 import com.lowdragmc.lowdraglib2.Platform;
-import com.lowdragmc.lowdraglib2.core.mixins.accessor.MinecraftAccessor;
+import com.lowdragmc.lowdraglib2.client.ClientEventListener;
 import com.lowdragmc.lowdraglib2.gui.ColorPattern;
 import com.lowdragmc.lowdraglib2.gui.holder.DebugScreen;
 import com.lowdragmc.lowdraglib2.gui.ui.debugger.UIDebugger;
@@ -44,8 +44,8 @@ import net.minecraft.world.entity.player.Player;
 import net.minecraft.world.inventory.AbstractContainerMenu;
 import net.minecraft.world.inventory.tooltip.TooltipComponent;
 import net.minecraft.world.item.ItemStack;
-import net.neoforged.api.distmarker.Dist;
-import net.neoforged.api.distmarker.OnlyIn;
+import net.minecraftforge.api.distmarker.Dist;
+import net.minecraftforge.api.distmarker.OnlyIn;
 import org.appliedenergistics.yoga.YogaConstants;
 import org.joml.Matrix4f;
 import org.lwjgl.glfw.GLFW;
@@ -77,7 +77,7 @@ public class ModularUI {
     private ModularUIWidget widget;
     @Nullable
     @OnlyIn(Dist.CLIENT)
-    @Getter(onMethod_ = {@OnlyIn(Dist.CLIENT)})
+    @Getter
     private Screen screen;
     @Getter
     private TaffyTree taffyTree;
@@ -303,7 +303,7 @@ public class ModularUI {
     public UIElement getElementById(@Nullable String id) {
         if (id == null || id.isEmpty()) return null;
         List<UIElement> elements = elementsById.get(id);
-        return elements != null && !elements.isEmpty() ? elements.getFirst() : null;
+        return elements != null && !elements.isEmpty() ? elements.get(0) : null;
     }
 
     /**
@@ -877,6 +877,10 @@ public class ModularUI {
         }
 
         @Override
+        public boolean mouseScrolled(double mouseX, double mouseY, double scrollY) {
+            return mouseScrolled(mouseX, mouseY, 0, scrollY);
+        }
+
         public boolean mouseScrolled(double mouseX, double mouseY, double scrollX, double scrollY) {
             var current = getLastHoveredElement();
             if (current != null) {
@@ -1088,8 +1092,8 @@ public class ModularUI {
         @Override
         public void render(GuiGraphics guiGraphics, int mouseX, int mouseY, float partialTick) {
             // update tick
-            if (tickWhileRending && Minecraft.getInstance() instanceof MinecraftAccessor accessor) {
-                var currentTick = accessor.ldlib2$getClientTickCount();
+            if (tickWhileRending) {
+                var currentTick = ClientEventListener.getClientTickCount();
                 if (currentTick != lastTick) {
                     tick();
                     lastTick = currentTick;
@@ -1184,7 +1188,7 @@ public class ModularUI {
             var transform = element.getLocalToWorldPose();
             graphics.pose().pushPose();
             graphics.pose().setIdentity();
-            graphics.pose().mulPose(transform);
+            graphics.pose().mulPoseMatrix(transform);
             var posX = element.getPositionX();
             var posY = element.getPositionY();
             var sizeX = element.getSizeWidth();
